# GRIT

./: CMakeLists.txt
src/: CMakeLists.txt  matrix.hpp  system.cpp  system.hpp
